@startuml Class Diagram
class User {
    -id: String (PK)
    -email: String
    -username: String
    -password: String
    +register()
    +login()
}

class Location {
    -id: String (PK)
    -aemet_code: String
    -name: String
    -latitude: Double
    -longitude: Double
    -is_coastal: Boolean
    -coast_code_id: String (FK -> coast_code.id)
}

class PointOfInterest {
    -id: String (PK)
    -name: String
    -latitude: Double
    -longitude: Double
    -description: String
    -is_global: Boolean
    -location_id: String (FK -> location.id)  ' optional
}

class Forecast {
    -id: String (PK)
    -temperature: Double
    -wind: String
    -rain_probability: Double
    -date_time: DateTime
    -location_id: String (FK -> location.id)
}

class Alert {
    -id: String (PK)
    -level: String
    -phenomenon: String
    -start_date: DateTime
    -end_date: DateTime
    -location_id: String (FK -> location.id)
}

class Tide {
    -id: String (PK)
    -timestamp: DateTime
    -height: Double
    -location_id: String (FK -> location.id)
    -coast_code_id: String (FK -> coast_code.id)
}

class CoastCode {
    -id: String (PK)
    -code: String
    -name: String
    -description: String
}

class UserPointOfInterest {
    -user_id: String (PK, FK -> user.id)
    -point_of_interest_id: String (PK, FK -> point_of_interest.id)
    -favorited_at: DateTime
}

class UserLocation {
    -user_id: String (PK, FK -> user.id)
    -location_id: String (PK, FK -> location.id)
    -selected_at: DateTime
}

' User relationships
User "1..*" -- "0..*" UserLocation : selects >
UserLocation "0..*" -- "1" Location : refers >

User "1..*" -- "0..*" UserPointOfInterest : has >
UserPointOfInterest "0..*" -- "1" PointOfInterest : refers >

' AEMET data linked with location
Location "1" -- "0..*" Forecast : has >
Location "1" -- "0..*" Alert : has >
Location "1" -- "0..*" Tide : has >

' Relations for coast codes
CoastCode "1" -- "0..*" Tide : used by >
Location "0..1" -- "0..1" CoastCode : may reference >

' POIs can optionally be linked to a location
PointOfInterest "0..*" .. "0..1" Location : near >
@enduml
